src/objects/ISSP_External_Report__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Id of the account that is associated to the external report</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>External Reports</relationshipLabel>
        <relationshipName>ISSP_External_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <description>Report domain (ex: TIP)</description>
        <label>Domain</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_ID__c</fullName>
        <description>Id that represents the report (the valur should be configured in the custom setting &apos;ISSP_External_Reports_Config__c&apos;</description>
        <externalId>true</externalId>
        <label>Report ID</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <description>System that requested the report creation</description>
        <label>Source System</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>External Report</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Report Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>